# mods/points/api/res/PointsLogRes.go
@@ -1,0 +1,10 @@
+package res
+
+import "time"
+
+type PointsLogRes struct {
+	Points     int64     `json:"points"`
+	IsSyncLink bool      `json:"isSyncLink"`
+	Source     string    `json:"source"`
+	CreatedAt  time.Time `json:"createdAt"`
+}
